Improved biome selection